<resources>
    <string name="Proyecto">ContactosApp</string>
    <string name="botonSelec">Seleccionar Contacto</string>
    <string name="botonLlamar">Llamar</string>
    <string name="nombreContact">Nombre</string>
    <string name="telefonoContact">Teléfono</string>
    <string name="CorreoContact">Correo</string>
    <string name="EnviarEmail">Enviar Correo</string>
    <string name="EnviarSMS">Enviar SMS</string>

</resources>
