<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    tools:context=".MainActivity"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Button
        android:id="@+id/botonSeleccionar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:onClick="initSeleccionarContacto"
        android:text="@string/botonSelec"/>

    <TextView
        android:id="@+id/nombreContacto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombreContact"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/botonSeleccionar"
        />
    <TextView
        android:id="@+id/telefonoContacto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefonoContact"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/nombreContacto"
        android:layout_marginTop="20dp"
        />
    <ImageView
        android:id="@+id/fotoContacto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:src="@android:drawable/ic_menu_gallery"
        android:layout_below="@id/botonSeleccionar"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:hint="Mensaje"
        android:layout_marginTop="23dp"
        android:id="@+id/txtMensaje"
        android:layout_below="@+id/Correo"/>


    <TextView
        android:id="@+id/Correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CorreoContact"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/telefonoContacto"
        android:layout_marginTop="20dp"
        />




    <Button
        android:id="@+id/botonEnviarSMS"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:onClick="EnviarMensaje"
        android:text="@string/EnviarSMS"
        android:layout_below="@+id/txtMensaje"/>

    <Button
        android:id="@+id/botonLlamar"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:onClick="llamar"
        android:text="@string/botonSelec"
        android:layout_below="@+id/botonEnviarSMS"/>


    <Button
        android:id="@+id/botonCorreo"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:onClick="enviar_Email"
        android:text="@string/EnviarEmail"
        android:layout_below="@+id/botonLlamar"/>



</RelativeLayout>